# Catsgramm

./: LICENSE  README.md  main.py  pyproject.toml  readme.txt  requirements.txt  test.db
migrations/versions/: 987675652c86_email.py  f464a6ffb912_emconfirm.py
scr/: schemas.py
scr/conf/: config.py  messages.py
scr/database/: db.py  models.py
scr/repository/: users.py
scr/routes/: auth.py  cloud.py  notes.py  users.py
scr/services/: auth.py  email.py
tests/: conftest.py
